<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_overview_blue"
            android:title="@string/menu_overview" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_tasks"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_menu_schedules"
            android:title="@string/menu_schedules" />
        <item
            android:id="@+id/nav_wardrobe"
            android:icon="@drawable/ic_menu_wardrobe"
            android:title="@string/menu_wardrobe" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_contact_support"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_contact_support" />
    </group>
</menu>