<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.personalassistantapp.ui.home.HomeFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_home" />

    <!--    <fragment-->
    <!--        android:id="@+id/nav_gallery"-->
    <!--        android:name="com.example.personalassistantapp.ui.gallery.GalleryFragment"-->
    <!--        android:label="@string/menu_gallery"-->
    <!--        tools:layout="@layout/fragment_gallery" />-->

    <!--    <fragment-->
    <!--        android:id="@+id/nav_slideshow"-->
    <!--        android:name="com.example.personalassistantapp.ui.slideshow.SlideshowFragment"-->
    <!--        android:label="@string/menu_slideshow"-->
    <!--        tools:layout="@layout/fragment_slideshow" />-->

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.personalassistantapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.personalassistantapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_schedules"
        android:name="com.example.personalassistantapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_schedules"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_wardrobe"
        android:name="com.example.personalassistantapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_wardrobe"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.personalassistantapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_contact_support"
        android:name="com.example.personalassistantapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_contact_support"
        tools:layout="@layout/fragment_slideshow" />

<!--Navigation from events page to the add event and back-->

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.personalassistantapp.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events">
        <action
            android:id="@+id/action_eventsFragment_to_addEventsFragment"
            app:destination="@id/addEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.example.personalassistantapp.ui.events.AddEventFragment"
        android:label="Add event"
        tools:layout="@layout/fragment_add_event" >
        <action
            android:id="@+id/action_addEventsFragment_to_eventsFragment"
            app:destination="@id/nav_events" />
    </fragment>
</navigation>